<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="profession_label">Сфера деятельности</string>
    <string name="push_label">Получать push-уведомления</string>
    <string name="friends_label">Ваши друзья</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="history">История</string>
    <string name="profile">Профиль</string>
    <string name="help">Помочь</string>
    <string name="friend_photo">Friend photo</string>
    <string name="edit">Edit</string>
    <string name="loading">Загрузка…</string>
    <string name="upload_photo">Выбрать фото</string>
    <string name="make_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <string name="choose_help_category">Выберите категорию помощи</string>
    <string name="children">Дети</string>
    <string name="search_hint">Введите название организации</string>
    <string name="search_key_words">Ключевые слова: %s</string>
    <string name="search_result_number">Результаты поиска: %d мероприятий</string>
    <string name="filter">Фильтр</string>
    <string name="help_category">Категории помощи</string>
    <string name="done">Применить</string>
    <string name="share">Поделиться</string>
    <string name="have_questions">У вас есть вопросы?</string>
    <string name="write_us"><u>Напишите нам</u></string>
    <string name="navigate_to_site"><u>Перейти на сайт оргранизации</u></string>
    <string name="help_by_things">Помочь\nвещами</string>
    <string name="become_volunteer">Стать\nволонтером</string>
    <string name="help_professionals">Проф.\nпомощь</string>
    <string name="help_coins">Помочь\nденьгами</string>
    <string name="followers_count">+%d</string>

    <string-array name="tabs_title">
        <item>По мероприятиям</item>
        <item>По НКО</item>
    </string-array>
    <string name="auth">Авторизация</string>
    <string name="auth_text">Для участия в мероприятиях войдите в приложение через социальые сети</string>
    <string name="auth_text_2">Или авторизуйтесь через приложение</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_hint">Введите e-mail</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="registration"><u>Регистрация</u></string>
    <string name="empty_search_text_1">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="empty_search_text_2">Например,\u0020</string>
    <string name="empty_search_text_3"><u>мастер-класс, помощь</u></string>
</resources>
