<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@id/navigationNewsFragment"
        android:icon="@drawable/ic_news"
        app:showAsAction="ifRoom|withText"
        android:title="@string/news" />

    <item android:id="@id/navigationSearchFragment"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|withText"
        android:title="@string/search" />

    <item android:id="@+id/navigationHelpFragment"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@id/navigationHistoryFragment"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom|withText"
        android:title="@string/history" />

    <item android:id="@id/navigationProfileFragment"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom|withText"
        android:title="@string/profile" />
</menu>
