<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back">

                <TextView
                    style="@style/TitleToolbarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/auth" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/authText1"
            style="@style/TextStyle3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_auth_text_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/margin_auth_text_horizontal"
            android:text="@string/auth_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar" />

        <ImageButton
            android:id="@+id/vk"
            android:layout_width="@dimen/auth_social_button_size"
            android:layout_height="@dimen/auth_social_button_size"
            android:src="@drawable/ic_vk"
            app:layout_constraintEnd_toStartOf="@+id/fb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fb"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/fb"
            android:layout_width="@dimen/auth_social_button_size"
            android:layout_height="@dimen/auth_social_button_size"
            android:layout_marginTop="@dimen/margin_2x"
            android:src="@drawable/ic_fb"
            app:layout_constraintEnd_toStartOf="@+id/ok"
            app:layout_constraintStart_toEndOf="@+id/vk"
            app:layout_constraintTop_toBottomOf="@+id/authText1"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/ok"
            android:layout_width="@dimen/auth_social_button_size"
            android:layout_height="@dimen/auth_social_button_size"
            android:src="@drawable/ic_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fb"
            app:layout_constraintTop_toTopOf="@+id/fb"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/authText2"
            style="@style/TextStyle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/auth_text_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fb" />

        <TextView
            android:id="@+id/emailLabel"
            style="@style/TextStyle15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/e_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authText2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailWrapper"
            style="@style/EditTextStyleAuth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginEnd="@dimen/margin_2x"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel">

            <EditText
                android:id="@+id/email"
                style="@style/EditTextStyleAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/e_mail_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passLabel"
            style="@style/TextStyle15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="26dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailWrapper" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordWrapper"
            style="@style/EditTextStyleAuth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passLabel"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2x"
                android:layout_marginEnd="@dimen/margin_2x"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="@dimen/margin_2x"
            android:enabled="false"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordWrapper" />

        <TextView
            android:id="@+id/forgotPassword"
            style="@style/TextStyleLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_2x"
            android:layout_marginEnd="@dimen/margin_2x"
            android:layout_marginBottom="40dp"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <TextView
            android:id="@+id/registration"
            style="@style/TextStyleLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_2x"
            android:text="@string/registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/forgotPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
