<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/news_details_toolbar_menu"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:id="@+id/title"
                style="@style/TitleToolbarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/newsTitle"
                style="@style/TextStyleNewsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2x"
                android:layout_marginTop="@dimen/margin_1x"
                android:layout_marginEnd="@dimen/margin_2x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem" />

            <ImageView
                android:id="@+id/imageCalendar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_2x"
                android:layout_marginTop="@dimen/margin_1x"
                android:src="@drawable/ic_calendar_small_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newsTitle"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:drawablePadding="@dimen/margin_06x"
                android:lineSpacingExtra="4sp"
                android:textColor="@color/news_details_date"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageCalendar"
                app:layout_constraintStart_toEndOf="@id/imageCalendar"
                app:layout_constraintTop_toTopOf="@+id/imageCalendar"
                tools:text="@tools:sample/date/mmddyy" />

            <TextView
                android:id="@+id/organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_06x"
                android:lineSpacingExtra="8sp"
                android:textColor="@color/black_60"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/imageCalendar"
                app:layout_constraintTop_toBottomOf="@+id/date"
                tools:text="@tools:sample/lorem" />

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_06x"
                android:src="@drawable/ic_navigation"
                app:layout_constraintStart_toStartOf="@+id/organization"
                app:layout_constraintTop_toBottomOf="@+id/organization"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/address"
                style="@style/TextStyle10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_06x"
                android:layout_marginEnd="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/locationIcon"
                app:layout_constraintTop_toTopOf="@+id/locationIcon"
                tools:text="@tools:sample/lorem" />

            <ImageView
                android:id="@+id/phoneIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                app:layout_constraintStart_toStartOf="@+id/locationIcon"
                app:layout_constraintTop_toTopOf="@+id/phone"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/phone"
                style="@style/TextStyle10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1x"
                app:layout_constraintStart_toStartOf="@+id/address"
                app:layout_constraintTop_toBottomOf="@+id/address"
                tools:text="@tools:sample/us_phones" />

            <ImageView
                android:id="@+id/mailIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail"
                app:layout_constraintBottom_toBottomOf="@+id/haveQuestions"
                app:layout_constraintStart_toStartOf="@+id/phoneIcon"
                app:layout_constraintTop_toTopOf="@+id/haveQuestions"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/haveQuestions"
                style="@style/TextStyle10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_06x"
                android:layout_marginTop="@dimen/margin_1x"
                android:text="@string/have_questions"
                app:layout_constraintStart_toEndOf="@+id/mailIcon"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/writeUs"
                style="@style/TextStyleLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/write_us"
                app:layout_constraintStart_toEndOf="@+id/haveQuestions"
                app:layout_constraintTop_toTopOf="@+id/haveQuestions" />

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="205dp"
                android:layout_height="158dp"
                android:layout_marginStart="@dimen/margin_2x"
                android:layout_marginTop="@dimen/margin_2x"
                app:layout_constraintEnd_toStartOf="@+id/smallImage1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/haveQuestions"
                tools:ignore="ContentDescription"
                tools:src="@drawable/cardimage_1" />

            <ImageView
                android:id="@+id/smallImage1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_06x"
                android:layout_marginEnd="@dimen/margin_2x"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/smallImage2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mainImage"
                app:layout_constraintTop_toTopOf="@+id/mainImage"
                tools:ignore="ContentDescription"
                tools:src="@drawable/cardimage_2" />

            <ImageView
                android:id="@+id/smallImage2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_06x"
                android:layout_marginTop="@dimen/margin_06x"
                android:layout_marginEnd="@dimen/margin_2x"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/mainImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mainImage"
                app:layout_constraintTop_toBottomOf="@+id/smallImage1"
                tools:ignore="ContentDescription"
                tools:src="@drawable/cardimage_3" />

            <TextView
                android:id="@+id/description"
                style="@style/TextStyle10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_2x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainImage"
                tools:lines="5"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/linkSite"
                style="@style/TextStyleLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2x"
                android:layout_marginTop="@dimen/margin_2x"
                android:text="@string/navigate_to_site"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <LinearLayout
                android:id="@+id/recyclerContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/grey_background"
                android:orientation="horizontal"
                android:padding="@dimen/margin_2x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linkSite">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:itemCount="5"
                    tools:listitem="@layout/follower_item" />

                <TextView
                    android:id="@+id/followersCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_06x"
                    android:lineSpacingExtra="6sp"
                    android:textColor="@color/black_54"
                    android:textSize="14sp"
                    tools:text="+102" />
            </LinearLayout>

            <View
                android:id="@+id/decorator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/cool_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerContainer" />

            <Button
                android:id="@+id/helpByThings"
                style="@style/ButtonsHelpStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_shirt"
                android:text="@string/help_by_things"
                app:layout_constraintEnd_toStartOf="@+id/helpVolunteer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/decorator" />

            <View
                android:id="@+id/separator1"
                android:layout_width="1dp"
                android:layout_height="@dimen/separator_height"
                android:background="@drawable/separator_2"
                app:layout_constraintStart_toEndOf="@id/helpByThings"
                app:layout_constraintTop_toTopOf="@id/helpByThings" />

            <Button
                android:id="@+id/helpVolunteer"
                style="@style/ButtonsHelpStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_hands"
                android:text="@string/become_volunteer"
                app:layout_constraintEnd_toStartOf="@+id/helpProfessional"
                app:layout_constraintStart_toEndOf="@+id/helpByThings"
                app:layout_constraintTop_toBottomOf="@id/decorator" />

            <View
                android:id="@+id/separator2"
                android:layout_width="1dp"
                android:layout_height="@dimen/separator_height"
                android:background="@drawable/separator_2"
                app:layout_constraintStart_toEndOf="@id/helpVolunteer"
                app:layout_constraintTop_toTopOf="@id/helpVolunteer" />

            <Button
                android:id="@+id/helpProfessional"
                style="@style/ButtonsHelpStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_tools"
                android:text="@string/help_professionals"
                app:layout_constraintEnd_toStartOf="@+id/helpCoins"
                app:layout_constraintStart_toEndOf="@+id/helpVolunteer"
                app:layout_constraintTop_toBottomOf="@id/decorator" />

            <View
                android:id="@+id/separator3"
                android:layout_width="1dp"
                android:layout_height="@dimen/separator_height"
                android:background="@drawable/separator_2"
                app:layout_constraintStart_toEndOf="@id/helpProfessional"
                app:layout_constraintTop_toTopOf="@id/helpProfessional" />

            <Button
                android:id="@+id/helpCoins"
                style="@style/ButtonsHelpStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_coins"
                android:text="@string/help_coins"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/helpProfessional"
                app:layout_constraintTop_toBottomOf="@id/decorator" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
